<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textSize="20sp"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/cardview_dark_background"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home"
        app:layout_constraintBottom_toBottomOf="@+id/home"
        android:src="@drawable/ic_baseline_notifications_24"
        android:padding="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upperButtons"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/home"
        android:background="@color/cardview_dark_background">

        <View
            android:id="@+id/line"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_0_00_amd"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_add_circle_outline_24"
            app:layout_constraintBottom_toBottomOf="@id/wallet"
            app:layout_constraintRight_toLeftOf="@+id/line"
            app:layout_constraintTop_toTopOf="@+id/wallet" />

        <LinearLayout
            android:id="@+id/orderNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@+id/line"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_now"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/line"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visa_rocket"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/line"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_add_card_24"
            app:layout_constraintBottom_toBottomOf="@id/orderNow"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/orderNow" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rocketLineFild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/upperButtons">

        <ImageView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/ic_baseline_percent_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rocketLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rocket_line"
            android:textSize="11sp"
            app:layout_constraintLeft_toRightOf="@+id/percent"
            app:layout_constraintTop_toTopOf="@id/percent"
            app:layout_constraintBottom_toBottomOf="@+id/percent"/>
        
        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/rocketLine"
            app:layout_constraintTop_toTopOf="@id/percent"
            app:layout_constraintBottom_toBottomOf="@+id/percent"
            android:text="@string/_0_00_amd"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="10dp"/>

        <View
            android:layout_width="310dp"
            android:layout_height="4dp"
            android:background="@color/green"
            android:padding="10dp"
            app:layout_constraintLeft_toRightOf="@+id/percent"
            app:layout_constraintTop_toBottomOf="@+id/money" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/rocketLineFild">

    </androidx.recyclerview.widget.RecyclerView>


        <TextView
            android:id="@+id/PayTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_and_transfer"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/seeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:text="@string/see_all"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>





    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView2"
        app:layout_constraintTop_toBottomOf="@+id/PayTransfer">

    </androidx.recyclerview.widget.RecyclerView>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toBottomOf="@+id/recyclerView2"
    android:layout_marginTop="20dp"
    app:cardCornerRadius="10dp">
<!--    app:cardElevation="24dp"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <Button
        android:id="@+id/QR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark"
        android:drawableTop="@drawable/ic_baseline_qr_code_24"
        android:text="@string/qr"
        android:textColor="@color/white"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:padding="20dp"
        app:cardElevation="24dp"

        />

    <Button
        android:id="@+id/NFC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark"
        android:drawableTop="@drawable/ic_baseline_contactless_24"
        android:text="@string/nfc"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@+id/QR"
        android:layout_marginRight="25dp"
        android:padding="20dp"
        app:cardElevation="24dp"

        />

    <Button
        android:id="@+id/partner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/NFC"
        android:backgroundTint="@color/dark"
        android:drawableTop="@drawable/ic_baseline_business_24"
        android:text="@string/partner"
        android:textColor="@color/white"
        android:layout_marginRight="25dp"
        android:padding="20dp"
        android:elevation="10dp"
        app:cardElevation="24dp"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation_menu"
            app:backgroundTint="@color/cardview_dark_background"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>